--- a/docs/ilamb.cfg
+++ b/docs/ilamb.cfg
@@ -184,7 +184,7 @@ plot_unit  = "g m-2 d-1"
 [h2: Ecosystem Respiration]
 variable       = "reco"
 derived        = "(FATES_AUTORESP*FATES_FRACTION)"
-alternate_vars = "ra+rh"
+alternate_vars = "ER"
 weight         = 4
 mass_weighting = True
 
