--- a/docs/ilamb.cfg
+++ b/docs/ilamb.cfg
@@ -8,112 +8,6 @@
 bgcolor = "#ECFFE6"
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#--------------------------------------------------------------
-[h2: Biomass ]
-variable       = "biomass"
-derived        = "FATES_VEGC * FATES_FRACTION"
-alternate_vars = "TOTVEGC"
-cmap           = "autumn"
-weight         = 5
-skip_rmse      = True
-mass_weighting = True
-
-
-[GlobalCarbon]
-source     = "DATA/biomass/GEOCARBON/biomass.nc"
-weight     = 16
-table_unit = "Pg"
-plot_unit  = "kg m-2"
-space_mean = False
-
-[NBCD2000]
-source     = "DATA/biomass/NBCD2000/biomass_0.5x0.5.nc"
-weight     = 8
-table_unit = "Pg"
-plot_unit  = "kg m-2"
-space_mean = False
-
-[USForest]
-source     = "DATA/biomass/USForest/biomass_0.5x0.5.nc"
-weight     = 8
-table_unit = "Pg"
-plot_unit  = "kg m-2"
-space_mean = False
-
-[ESACCI]
-source = "DATA/biomass/ESACCI/biomass.nc"
-weight     = 20
-table_unit = "Pg"
-plot_unit  = "kg m-2"
-space_mean = False
-####
-
-[h2: Leaf Area Index]
-variable       = "lai"
-alternate_vars = "TLAI"
-cmap           = "Greens"
-weight         = 3
-mass_weighting = True
-
-[AVHRR]
-source        = "DATA/lai/AVHRR/lai_0.5x0.5.nc"
-weight        = 15
-#relationships = "Precipitation/GPCPv2.3"
-
-[AVH15C1]
-source        = "DATA/lai/AVH15C1/lai.nc"
-weight        = 15
-#relationships = "Precipitation/GPCPv2.3"
-
-[MODIS]
-source        = "DATA/lai/MODIS/lai_0.5x0.5.nc"
-weight        = 15
-#relationships = "Precipitation/GPCPv2.3"
-skip_iav      = True
-
-
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-[h2: Net Ecosystem Exchange]
-variable       = "nee"
-derived         = "FATES_NEP * FATES_FRACTION"
-alternate_vars  = "NEP"
-#derived        = "ra+rh-gpp"
-weight         = 5
-mass_weighting = True
-
-[FLUXNET2015]
-source     = "DATA/nee/FLUXNET2015/nee.nc"
-weight     = 9
-table_unit = "g m-2 d-1"
-plot_unit  = "g m-2 d-1"
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-[h2: Ecosystem Respiration]
-variable       = "reco"
-derived        = "(FATES_AUTORESP*FATES_FRACTION)"
-alternate_vars = "ER"
-weight         = 4
-mass_weighting = True
-
-[FLUXNET2015]
-source     = "DATA/reco/FLUXNET2015/reco.nc"
-weight     = 6
-table_unit = "g m-2 d-1"
-plot_unit  = "g m-2 d-1"
-
-[FLUXCOM]
-source     = "DATA/reco/FLUXCOM/reco.nc"
-weight     = 4
-table_unit = "Pg yr-1"
-plot_unit  = "g m-2 d-1"
-space_mean = False
-skip_iav   = True
-
-
-#######
 
 [h2: Gross Primary Productivity]
 variable       = "FPSN"
@@ -160,7 +54,7 @@ cmap           = "Oranges"
 weight         = 5
 mass_weighting = True
 
-[FLUXCOM]
+[Fluxcom]
 source   = "DATA/hfls/FLUXCOM/le.nc"
 weight   = 3
 
@@ -192,15 +86,15 @@ skip_iav = True
 
 #####
 
-#[h2: Runoff]
-#variable       = "runoff"
-#alternate_vars = "mrro,QRUNOFF"
-#weight         = 5
+[h2: Runoff]
+variable       = "runoff"
+alternate_vars = "mrro,QRUNOFF"
+weight         = 5
 
-#[Dai]
-#ctype          = "ConfRunoff"
-#source         = "DATA/mrro/Dai/runoff.nc"
-#weight         = 15
+[Dai]
+ctype          = "ConfRunoff"
+source         = "DATA/mrro/Dai/runoff.nc"
+weight         = 15
 
 ######
 
@@ -217,6 +111,5 @@ ctype    = "ConfAlbedo"
 source   = "DATA/albedo/CERESed4.2/albedo.nc"                                                        
 weight   = 20                                                                                        
 
-[GEWEX.SRB]
-source   = "DATA/albedo/GEWEX.SRB/albedo_0.5x0.5.nc"
+[GEWEX.SRB]                                                                                          source   = "DATA/albedo/GEWEX.SRB/albedo_0.5x0.5.nc"
 weight = 10
